--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,6 +27,6 @@ label{
 
 input,select{
     @apply border border-slate-300 px-3 py-2 rounded-md focus:outline-none focus:border-2
-    focus:border-slate-500 placeholder:text-sm 
+    focus:border-slate-500 placeholder:text-sm w-full
 }
 
